fixes up nav and left rail spacing

--- a/css/style.css
+++ b/css/style.css
@@ -450,8 +450,8 @@ h2 {
   background-color: #f5f5f5;
 /*  height: 60px;
 */  margin-top: 20px;
-  max-width: 292px;
-  width: 88.5%;
+
+  max-width: 88.5%;
   margin-left: auto;
   margin-right: auto;
   /*padding-bottom: 15px;*/
@@ -707,7 +707,7 @@ table {
   margin-top: 0px;
 }
 .left-table {
-  max-width: 328px;
+  max-width: 360px;
   margin-top: -7px;
 }
 .left-table > table {
@@ -780,7 +780,7 @@ th {
 }
 .left-table table tbody .cell-data > td {
    font-size: 16px;
-   width: 84px;
+   width: 33%;
    vertical-align: unset;
 }
 
@@ -850,6 +850,7 @@ th {
 }
 
 #cat-nav {
+      border-top: 2px solid #eee;
   background-color: #000000;
   height: 40px;
 }
@@ -944,7 +945,7 @@ html .ui-button.ui-state-disabled:active {
     width: 870px !important;
   }
   td.td-table {
-    width: 330px !important;
+    width: 380px !important;
   }
 
 }
